# tardis-cli

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENCE.md  README.md  SECURITY.md  build.rs  cog.toml  deny.toml  justfile  release.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml  smoke.yml
.planning/phases/10-cli-polish-documentation/: 10-05-SUMMARY.md
assets/: config_template.toml
benches/: parse.rs
docs/: CONFIGURATION.md  EXPRESSIONS.md  FORMAT-SPECIFIERS.md  SUBCOMMANDS.md  td-completions.1.md  td-config.1.md  td-convert.1.md  td-diff.1.md  td-info.1.md  td-range.1.md  td-tz.1.md  td.1.md
docs/man/: td-completions.1  td-config.1  td-convert.1  td-diff.1  td-info.1  td-range.1  td-tz.1  td.1
hooks/: pre-commit.sh
scripts/: dev-setup.sh  guard-release-files.sh
src/: cli.rs  cli_defs.rs  config.rs  core.rs  errors.rs  lib.rs  main.rs
src/locale/: en.rs  mod.rs  pt.rs
src/parser/: ast.rs  error.rs  grammar.rs  lexer.rs  mod.rs  resolver.rs  suggest.rs  token.rs
supply-chain/: audits.toml  config.toml
tests/: cli_integration.rs  cli_tests.rs  golden_expressions.rs  locale_integration.rs
