[package]
name = "tardis-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "TARDIS - Translates natural language dates into machine-readable formats"
license = "MIT"
repository = "https://github.com/hvpaiva/tardis-cli"
documentation = "https://docs.rs/tardis-cli"
readme = "README.md"
keywords = ["cli", "date", "time", "natural-language", "parser"]
categories = ["command-line-utilities", "date-and-time"]
exclude = [".github/", "examples/", "scripts/", "assets/tardis.png"]
include = [
  "src/**",
  "assets/config_template.toml",
  "Cargo.toml",
  "README.md",
  "LICENCE*",
]

[[bin]]
name = "td"
path = "src/main.rs"

[[bench]]
name = "parse"
harness = false

[dependencies]
clap = { version = "4.6.0", features = ["color", "derive", "env"] }
dirs = "6.0.0"
jiff = { version = "0.2", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.0"
color-print = "0.3.7"
clap_complete = "4.6.0"
clap_mangen = "0.2.33"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.2.0"
assert_fs = "1.1.3"
criterion = "0.8.2"
insta = "1.46.3"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
serial_test = "3.4.0"
tempfile = "3.27.0"

[profile.release]
lto = true
strip = "symbols"
